# voice-memo-file-manager

./: .gitignore  audio_manager.py  main.py  pyproject.toml  test_main.py
voice_memo_file_manager/: __main__.py  audio_manager.py  commands.py
