[tool.poetry]
name = "voice-memo-file-manager"
version = "0.1.0"
description = "Manager for audio memo files in a directory"
authors = ["nick good <nicksogood@hotmail.com>"]
readme = "README.md"
packages = [{include = "voice_memo_file_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
inquirerpy = "^0.3.4"
simpleaudio = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
